[package]
name = "viola"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [".", "viola_core/", "viola_macros/", "viola_plugin/"]

[workspace.dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
astral-tl = "0.7.11"
base64 = "0.22.1"
dirs = "6.0.0"
futures = "0.3.32"
humansize = "2.1.3"
image = {
  version = "0.25",
  default-features = false,
  features = ["jpeg", "png"]
}
inventory = "0.3.24"
log = "0.4.29"
mlua = {
  version = "0.11.6",
  features = ["anyhow", "async", "lua55", "send", "serialize"]
}
moka = { version = "0.12.15", features = ["future"] }
reqwest = {
  version = "0.13.4",
  default-features = false,
  features = ["charset", "cookies", "form", "http2", "json", "query", "rustls"]
}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.39.3"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
viola_core = { path = "viola_core/" }
viola_macros = { path = "viola_macros" }
viola_plugin = { path = "viola_plugin/" }
wacore = {
  git = "https://github.com/oxidezap/whatsapp-rust",
  default-features = false
}
waproto = {
  git = "https://github.com/oxidezap/whatsapp-rust",
}
webp = "0.3.1"
whatsapp-rust = {
  git = "https://github.com/oxidezap/whatsapp-rust",
  default-features = false,
  features = [
    "moka-cache",
    "signal",
    "sqlite-storage",
    "tokio-native",
    "tokio-runtime",
    "tokio-transport",
  ]
}

[dependencies]
anyhow.workspace = true
async-trait = "0.1.89"
dirs.workspace = true
env_logger = "0.11.10"
futures.workspace = true
inventory.workspace = true
lexopt = "0.3.2"
log.workspace = true
qrcode = "0.14.1"
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
viola_core.workspace = true
viola_plugin.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

wacore.workspace = true
waproto.workspace = true
whatsapp-rust.workspace = true

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
