[package]
name = "viola"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [".", "viola_core/", "viola_macros/", "viola_plugin/"]

[workspace.dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = { version = "1", default-features = false }
compact_str = "0.9.1"
dirs = "6.0.0"
ffmpeg-next = "8.1.0"
futures = "0.3.32"
humansize = "2.1.3"
image = {
  version = "0.25",
  default-features = false,
  features = ["jpeg", "png"]
}
isahc = { version = "2.0.0", features = ["cookies"] }
linkme = "0.3"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.39.3"
tempfile = "3"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
viola_core = { path = "viola_core/" }
viola_macros = { path = "viola_macros" }
viola_plugin = { path = "viola_plugin/" }
webp = "0.3.1"
whatsapp-rust = {
  git = "https://github.com/oxidezap/whatsapp-rust",
  rev = "d441e5f",
  default-features = false,
  features = [
    "signal",
    "tokio-native",
    "tokio-runtime",
    "tokio-transport",
  ]
}

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode = { version = "2.0.1", features = ["serde"] }
bytes.workspace = true
compact_str.workspace = true
dirs.workspace = true
env_logger = "0.11.10"
futures.workspace = true
isahc.workspace = true
lexopt = "0.3.2"
log.workspace = true
qrcode = "0.14.1"
redb = "4.1.0"
serde.workspace = true
tokio.workspace = true
toml.workspace = true
viola_core.workspace = true
viola_plugin.workspace = true
whatsapp-rust.workspace = true

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
