[package]
name = "viola"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [".", "viola_command", "viola_core", "viola_macros"]

[workspace.dependencies]
ahash = { version = "0.8.12", features = [] }
bytes = { version = "1.12.1" }
isahc = {
  version = "2.0.1",
  default-features = false,
  features = ["cookies", "http2", "rustls-tls", "text-decoding"]
}
linkme = "0.3.36"
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
viola_command = { path = "viola_command/" }
viola_core = { path = "viola_core/" }
whatsapp-rust = {
  git = "https://github.com/oxidezap/whatsapp-rust",
  rev = "013a328",
  default-features = false,
  features = [
    "signal",
    "tokio-native",
    "tokio-runtime",
    "tokio-transport",
    "voip"
  ]
}

[dependencies]
ahash.workspace = true
bincode = { version = "2.0.1", features = ["serde"] }
bytes.workspace = true
env_logger = { version = "0.11.11", default-features = false }
isahc.workspace = true
log.workspace = true
qrcode = { version = "0.14.1", default-features = false }
redb = { version = "4.1.0" }
serde.workspace = true
tokio = { version = "1.52.4", features = ["rt-multi-thread"] }
viola_command.workspace = true
viola_core.workspace = true
whatsapp-rust.workspace = true

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
