[package]
name = "viola_command"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
humansize = "2.1.3"
image = {
  version = "0.25.10",
  default-features = false,
  features = ["gif", "jpeg", "png", "webp"]
}
isahc.workspace = true
linkme.workspace = true
serde.workspace = true
sysinfo = "0.39.6"
url = "2.5.8"
viola_core.workspace = true
viola_macros = { path = "../viola_macros/" }
webp = "0.3.1"
whatsapp-rust.workspace = true

[build-dependencies]
walkdir = "2"
