[package]
name = "viola_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
dirs.workspace = true
futures.workspace = true
inventory.workspace = true
isahc.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
wacore.workspace = true
waproto.workspace = true
whatsapp-rust.workspace = true
