[package]
name = "viola_core"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash.workspace = true
anyhow.workspace = true
dirs.workspace = true
futures.workspace = true
inventory.workspace = true
log.workspace = true
mlua.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
wacore.workspace = true
waproto.workspace = true
whatsapp-rust.workspace = true
