[package]
name = "viola_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
astral-tl.workspace = true
base64.workspace = true
humansize.workspace = true
image.workspace = true
inventory.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
viola_core.workspace = true
viola_macros.workspace = true
wacore.workspace = true
waproto.workspace = true
webp.workspace = true
whatsapp-rust.workspace = true

[build-dependencies]
walkdir = "2"
