[package]
name = "viola_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
humansize.workspace = true
image.workspace = true
linkme.workspace = true
reqwest.workspace = true
scraper = { version = "0.27.0" }
serde.workspace = true
serde_json = "1.0.149"
sysinfo.workspace = true
viola_core.workspace = true
viola_macros.workspace = true
wacore.workspace = true
waproto.workspace = true
webp.workspace = true
whatsapp-rust.workspace = true

[build-dependencies]
walkdir = "2"
