[package]
name = "viola_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
astral-tl = "0.7.11"
base64.workspace = true
bytes.workspace = true
humansize.workspace = true
image.workspace = true
isahc = {
  workspace = true,
  features = [
    "json",
  ]
}
linkme.workspace = true
serde.workspace = true
serde_json = "1.0.149"
sysinfo.workspace = true
url = "2.5.8"
viola_core.workspace = true
viola_macros.workspace = true
webp.workspace = true
whatsapp-rust.workspace = true

[build-dependencies]
walkdir = "2"
